--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
     <div class="main">
         <div class="top">
-            <img src="img/logo.png" alt="Logo of twitter" />
-            <h1>Log in to Twitter</h1>
+            <img src="img/logo.png" alt="Logo of twitter" class="logo"/>
+            <h1 id="header">Log in to Twitter</h1>
         </div>
     </div>
 </body>
