--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <img src="img/logo.png" alt="Logo of twitter" class="logo"/>
             <h1 id="header">Log in to Twitter</h1>
         </div>
+        <div class="form">
+            <input type="text" class="text" placeholder="Your phone, email or username"/> <br>
+            <input type="pasword" class="text" placeholder="Your password" />
+        </div>
     </div>
 </body>
 
