Added button and paragraphs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             <input type="text" class="text" placeholder="Your phone, email or username"/> <br>
             <input type="pasword" class="text" placeholder="Your password" />
         </div>
+        <div class="hero-btn">
+            <button>Log in</button>
+        </div>
+        <div class="paragraphs">
+            <a href="#" target="_blank" id="forgot">forgot password?</a>
+            <a href="#" target="_blank" id="sign-up">sign up for Twitter</a>
+        </div>
     </div>
 </body>
 
